# medical-entity-code-mapper

./: .gitignore  LICENSE  README.md  indices  pyproject.toml  uv_runner.py  uv_runner_tls.py
audit_logs/: audit_20250727.jsonl
examples/: quickstart.py  quickstart_uv.py  tls_client_example.py
scripts/: benchmark_optimized.py  download_models.py  generate_certificates.py  quick_benchmark.py  setup.py  solo_benchmark.py  solo_quick.py  start_optimized_servers.py  start_servers.sh  start_tls_servers.py  upload_indices_to_hf.py
src/: __init__.py  cli.py  entity_mapper_server_tls.py  web_interface_tls.py
src/mappers/: __init__.py  medical_entity_mapper.py  medical_entity_mapper_tls.py
src/servers/: __init__.py  base_dynamic_server.py  base_tls_server.py  hcpcs_server.py  hcpcs_server_optimized.py  hcpcs_server_tls.py  icd10_server.py  icd10_server_optimized.py  icd10_server_tls.py  loinc_server.py  loinc_server_optimized.py  loinc_server_tls.py  rxnorm_server.py  rxnorm_server_optimized.py  rxnorm_server_tls.py  snomed_server.py  snomed_server_optimized.py  snomed_server_tls.py
src/utils/: audit_logger.py  config.py  input_validator.py
tests/: __init__.py
tests/fixtures/: test_data.py
tests/unit/: test_entity_mapper.py  test_input_validator.py  test_tls_server.py
